tests/test_struct/good/same_name_fields.catala_en
## Article

```catala
declaration structure Foo:
  data f content integer

declaration structure Bar:
  data f content integer

declaration scope A:
  context output x content Foo
  context output y content integer

scope A:
  definition x equals Foo { -- f: 1 }
  definition y equals x.Foo.f
```

```catala-test-inline
$ catala Interpret -s A
[RESULT] Computation successful! Results:
[RESULT] x = Foo {"f"= 1}
[RESULT] y = 1
```
